# calcutool

./: LICENSE.txt  README.md  __init__.py  calcutool.py  derivative.py  integration.py  pyproject.toml  setup.py  test.pypirc
src/example_package_calcutool/: calcutool.py  derivative.py  integration.py
